--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,32 +15,6 @@ jobs:
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      - 
-        name: Login to Docker Hub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
-        id: docker_build
-        uses: docker/build-push-action@v2
-        with:
-          push: true
-          tags: uvarc/flask-container:latest
-      -
-        name: Image digest
-        run: echo ${{ steps.docker_build.outputs.digest }}
-
-  publish:
-    runs-on: ubuntu-latest
-    steps:
-      -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
       -
         name: Login to GHCR
         uses: docker/login-action@v1
@@ -54,7 +28,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ghcr.io/uvarc/flask-container:latest
+          tags: ghcr.io/ds3002/course:latest
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
