--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ghcr.io/ds2002/course:latest
+          tags: ghcr.io/nmagee/ds2002:latest
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
